# Unikernal-v8

./: .gitignore  README.md  package.json
.kiro/hooks/: adapter-report-generator.kiro.hook  test-on-save.kiro.hook
.kiro/steering/: product.md
adapters/bash/: adapter.js
adapters/c/: adapter.js
adapters/cpp/: adapter.js
adapters/csharp/: adapter.js
adapters/go/: adapter.js
adapters/haskell/: adapter.js
adapters/java/: adapter.js
adapters/kotlin/: adapter.js
adapters/lua/: adapter.js
adapters/matlab/: adapter.js
adapters/node/: adapter.js  client.js  index.js  package-lock.json  package.json
adapters/php/: adapter.js
adapters/python/: adapter.py  python-adapter.py  setup.py  test_send.py
adapters/r/: adapter.js
adapters/ruby/: adapter.js
adapters/rust/: adapter.js
adapters/swift/: adapter.js
adapters/test-adapter/: adapter.js  adapter.json
adapters/typescript/: adapter.js
docs/: API.md  ARCHITECTURE.md  adapters-overview.md  kernel-architecture.md  security-and-config.md  udm-overview.md
docs/archive/: udl_v1_legacy.md
docs/v8/: CHANGELOG.md  architecture.md  patch_control_plane.md
examples/multinode/: README.md
kernel/: package-lock.json  package.json  test.js
kernel/rust/: Cargo.toml
kernel/rust/src/: lib.rs  routing_engine.rs
tests/: ai-pipeline.js  cross-python-client.js  echo-client.js  haskell-matlab-nightmare.js  math-client.js  nightmare-matrix.js  python-math-client.py  string-client.js  suite.js  test_adapter_manager.js  test_kernel.js  test_kernel_v7.js  test_udl_udm_v7.js
tools/: debugger.js  monitor.js
(+90 files in other folders)
