[package]
name = "unikernal-core"
version = "8.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.napi]
version = "2"
default-features = false
features = ["napi8"]

[dependencies.napi-derive]
version = "2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
